--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .App {
   text-align: center
 }
@@ -32,6 +36,7 @@
   from {
     transform: rotate(0deg)
   }
+
   to {
     transform: rotate(360deg)
   }
